# qtClient

./: .clang-format  .gitignore  CMakeLists.txt  MessageTextEdit.cpp  TimerBtn.cpp  TimerBtn.h  adduseritem.cpp  adduseritem.h  adduseritem.ui  bubbleframe.cpp  bubbleframe.h  chatdlg.cpp  chatdlg.h  chatdlg.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  config.ii  customizeedit.cpp  customizeedit.h  docker-compose.yaml  findsuccessdlg.cpp  findsuccessdlg.h  findsuccessdlg.ui  global.cpp  global.h  httpmgr.cpp  (+37 more)
.cache/clangd/index/: TimerBtn.cpp.14DA95897477B666.idx  TimerBtn.h.F192356DC6D89754.idx  global.cpp.13CEEBDE1F248082.idx  global.h.CD052122DDD9A154.idx  httpmgr.cpp.6A6DA96B2C68E496.idx  httpmgr.h.773B01F946D21840.idx  logindialog.cpp.62E591AF2153AA8C.idx  logindialog.h.03775B0EE899102A.idx  main.cpp.8EB24E7853CFDE3F.idx  mainwindow.cpp.516F13DD0D24B109.idx  mainwindow.h.37761A35043A7442.idx  registerdialog.cpp.A4B7C841F3EE5786.idx  registerdialog.h.4A3C8E692DD8EF5B.idx  singleton.h.90D1EE259F9A4402.idx
front-end/: index.html  package-lock.json  package.json
front-end/proxy-server/: package-lock.json  package.json  server.js
front-end/src/: App.vue
front-end/src/assets/: tailwind.css
front-end/src/assets/components/: Navbar.vue
front-end/src/auth/: Login.vue  Signup.vue
front-end/src/router/: index.js
front-end/src/stores/: UserInfo.js
front-end/src/utilities/: axios.js  supabase.js
front-end/src/views/: ChatView.vue  HomeView.vue
style/: stylesheet.qss
